[gd_scene load_steps=2 format=3 uid="uid://dqxjmao7i5nhp"]

[ext_resource type="Script" uid="uid://df0nvjdqecv0p" path="res://settings/settings_scren.gd" id="1_5w5f0"]

[node name="Settings-scren" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5w5f0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Auflösung" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Auflösung"

[node name="Auflösung-aussuchen" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
item_count = 3
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1280x720"
popup/item_1/id = 1
popup/item_2/text = "900x500"
popup/item_2/id = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="scen-exit-Button" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10
text = "Back"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer/Auflösung-aussuchen" to="." method="_on_auflösungaussuchen_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/scen-exit-Button" to="." method="_on_scenexit_button_pressed"]
